# phreeqcrm

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  BMIPhreeqcRM.cpp  BMIPhreeqcRM.h  BMIVariant.cpp  BMIVariant.h  BMI_interface.F90  BMI_interface_C.h  BMI_interface_F.cpp  BMI_interface_F.h  BMI_methods.cpp  BMI_not_implemented.inc  CMakeLists.txt  CMakePresets.json  CSelectedOutput.cpp  CSelectedOutput.hxx  CTestConfig.cmake  CVar.hxx  DEVELOPER.md  ErrorReporter.hxx  FInterface.for  IPhreeqc.cpp  IPhreeqc.f.inc  IPhreeqc.f90.inc  IPhreeqc.h  IPhreeqc.hpp  IPhreeqc2.cpp  IPhreeqcF.F  IPhreeqcF.f  IPhreeqcLib.cpp  IPhreeqc_interface.F90  IPhreeqc_interface_F.cpp  IPhreeqc_interface_F.h  Makefile.am  PhreeqcParser.hxx  PhreeqcRM.cpp  PhreeqcRM.h  (+56 more)
.github/: subtrees.json  superprojects.json
.github/workflows/: ci.yml  cmake.yml  codeql.yml  config.yml  dist.yml  distro.yml  setup-fortran.yml  wheels.yml
Doxygen/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  Makefile  Makefile.am  Notes.txt  lower_case.bat  lower_case.sh  upper_case.bat  upper_case.sh  upper_case2.sh  upper_case2a.sh
IPhreeqcPhast/: IPhreeqcPhast.cxx  IPhreeqcPhast.f90.inc  IPhreeqcPhast.h
IPhreeqcPhast/IPhreeqc/: .gitlab-ci.yml  IPhreeqc.cpp  IPhreeqcLib.cpp  IPhreeqc_interface_F.cpp  Makefile.am  Version.h  fwrap.cpp  (+1 more)
PhreePlot/: CMakeLists.txt  PhreePlotOpenMP.f90  preloop2.pqi
PhreeqcHTMLVersion/: contents.template.hhc  phreeqc3.hhp
PhreeqcRM/: RM_interface.F90  RM_interface_C.cpp  RM_interface_F.h  bootstrap  configure.ac
Tests/: AdvectBMI_cpp.cpp  AdvectBMI_cpp_test.cpp  AdvectBMI_cpp_test.pqi  AdvectBMI_f90.F90  AdvectBMI_f90_test.F90  Advect_bmi_cpp.chem.txt  Advect_c.c  Advect_c.chem.txt  Advect_cpp.chem.txt  Advect_cpp.cpp  Advect_cpp_units_worker.chem.txt  Advect_cpp_utility.out  Advect_f90.F90  Advect_f90.chem.txt  Advect_f90.dump  CMakeLists.txt  Gas_c.c  Gas_cpp.chem.txt  Gas_cpp.cpp  Gas_f90.F90  Makefile.am  SimpleAdvect_c.c  SimpleAdvect_cpp.chem.txt  SimpleAdvect_cpp.cpp  SimpleAdvect_f90.F90  SimpleAdvection.cpp  Species_c.c  Species_c.chem.txt  Species_c.dmp  Species_cpp.chem.txt  Species_cpp.cpp  Species_f90.F90  Species_f90.chem.txt  Species_f90.dmp  Species_utility_c.txt  TestAllMethods_C.yaml  TestAllMethods_c.c  TestAllMethods_cpp.cpp  TestAllMethods_f90.F90  TestBMIdtor.cpp  (+35 more)
Tests/Output/: AdvectBMI_cpp.chem.txt  AdvectBMI_cpp.dmp  AdvectBMI_cpp.yaml  AdvectBMI_cpp_test.chem.txt  AdvectBMI_cpp_test.yaml  AdvectBMI_cpp_utility.txt  AdvectBMI_f90.chem.txt  AdvectBMI_f90.dmp  AdvectBMI_f90.yaml  AdvectBMI_f90_test.chem.txt  AdvectBMI_f90_test.yaml  AdvectBMI_py.yaml  Advect_c.chem.txt  Advect_c.dmp  Advect_c_utility.txt  Advect_cpp.chem.txt  Advect_cpp.dmp  Advect_cpp_units_utility.txt  Advect_cpp_units_worker.chem.txt  Advect_cpp_utility.txt  Advect_f90.chem.txt  Advect_f90.dmp  Advect_f90_utility.txt  Gas_c.chem.txt  Gas_cpp.chem.txt  Gas_f90.chem.txt  SimpleAdvect_c.chem.txt  SimpleAdvect_cpp.chem.txt  SimpleAdvect_f90.chem.txt  Species_c.chem.txt  Species_c.dmp  Species_c_utility.txt  Species_cpp.chem.txt  Species_cpp.dmp  Species_cpp_utility.txt  Species_f90.chem.txt  Species_f90.dmp  Species_f90_utility.txt  TestAllMethods_cpp.chem.txt  TestAllMethods_py.chem.txt  (+1 more)
Tests/vs2012/: FortranAdvect.vfproj  TestRM.sln  TestRM.vcxproj  TestRM.vcxproj.filters
database/: Makefile.am
doc/: CMakeLists.txt  Makefile.am  NOTICE.TXT  README.TXT
examples/: CMakeLists.txt
examples/swig/java/: CMakeLists.txt  advection.java
examples/swig/python/: CMakeLists.txt  advect.pqi  advection.py
phreeqcrm/: __init__.py
pybind/: CMakeLists.txt  docstrings.h  pybind.cpp  pybind.cxx
pybind/tests/: AdvectBMI_py.yaml  constants.py  test_basic.py  test_get_value.py  test_grid_info.py  test_irf.py  test_set_value.py
setup-fortran/: CMakeLists.txt  hw.f90
src/: .gitlab-ci.yml  BMIPhreeqcRM.cpp  BMIPhreeqcRM.h  BMIVariant.cpp  BMIVariant.h  BMI_Var.cpp  BMI_Var.h  BMI_interface.F90  BMI_interface_C.cpp  BMI_interface_C.h  BMI_interface_F.cpp  BMI_interface_F.h  BMI_methods.cpp  BMI_not_implemented.inc  CMakeLists.txt  IrmResult.h  PhreeqcRM.cpp  PhreeqcRM.h  PhreeqcRM.i  PyDoc10.py  PyDoc9  PyDoc9.py  RMVARS.h  RM_BMI_interface.F90  RM_BMI_interface_F.cpp  RM_interface.F90  RM_interface_C.cpp  RM_interface_C.h  RM_interface_F.cpp  RM_interface_F.h  VarManager.cpp  VarManager.h  YAMLPhreeqcRM.F90  YAMLPhreeqcRM.cpp  YAMLPhreeqcRM.h  YAMLPhreeqcRM_F.cpp  YAMLPhreeqcRM_F.h  YAML_interface.F90  YAML_interface_C.cpp  YAML_interface_C.h  (+4 more)
src/swig/python/: AdvectBMI_py.py  AdvectBMI_test_py.py  CMakeLists.txt  PhreeqcRM_docstrings.i  PhreeqcRM_docstrings.swg  SimpleAdvect.py  TestAllMethods_py.py  Test_all_methods.py  WriteYAMLFile_py.py  WriteYAMLFile_test_py.py  YAMLPhreeqcRM.i  yamlphreeqcrm.py
swig/: CMakeLists.txt  Makefile.am  PhreeqcRM.i  advection_cpp.py  phreeqcrm-bmi.i
swig/python/: AdvectBMI_py.py  AdvectBMI_py.yaml  AdvectBmi.py  AdvectBmiMPI.py  AdvectBmiOpenMP.py  AdvectBmiOpenMP.yaml  Anaconda Navigator.md  BMIPhreeqcRM_docstrings.swg  CMakeLists.txt  PhreeqcRM_docstrings.i  PhreeqcRM_docstrings.swg  SimpleAdvect.py  SimpleAdvectMPI.py  SimpleAdvectOpenMP.py  TestAllMethods.py  TestAllMethodsMPI.py  TestAllMethods_py.py  TestSimplePythonMPI.py  WriteYAMLFile_py.py  WriteYamlFile.py  YAMLPhreeqcRM.swg  conftest.py  constants.py  ex11-advect.ipynb  ex11_adv.ipynb  functions_docstrings.swg  guide-to-publish.md  miniconda-jupyter-notebook-readme.md  minimum.yaml  test_basic.py  test_callbacks.py  test_functions.py  test_get_value.py  test_init.py  test_irf.py  test_set_value.py  yamlphreeqcrm.py
swig/python/ex11-advect/: advect.pqi  environment.yml  ex11-advect.ipynb  ex11-advect.yaml
vs2008/: IPhreeqc.props  PhreeqcRM Includes.vsprops  PhreeqcRM OpenMP.vsprops  PhreeqcRM.vcproj
vs2010/: IPhreeqc.props  PhreeqcRM Includes.props  PhreeqcRM Includes.vsprops  PhreeqcRM MPI.props  PhreeqcRM OpenMP.props  PhreeqcRM.vcxproj
vs2012/: PhreeqcRM.vcxproj  PhreeqcRM.vcxproj.filters
vs2015/: IPhreeqc.props  PhreeqcRM.sln  PhreeqcRM.vcxproj
(+151 files in other folders)
